--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Welcome to PaperValut</title>
+        <link rel="stylesheet" href="./css/index.css" />
+        <link rel="icon" href="./assets/images/fevicon.png" />
     </head>
     <body>
         <div class="root">
@@ -13,12 +15,41 @@
                     <div class="logo_img"></div>
                     <div class="logo_text"><span>Paper</span>Valut</div>
                 </div>
+                <div class="auth_btns">
+                    <button class="verify">Verify</button>
+                    <button class="signup">Sign Up</button>
+                    <button class="login">Login</button>
+                </div>
             </div>
-            <!-- header  -->
-
-            <body>
-                
-            </body>
+            <!-- body  -->
+            <div class="body">
+                <div class="section1">
+                    <div class="left">
+                        <div class="heading">
+                            Your one-stop shop for signing, certifying, and
+                            verifying
+                        </div>
+                        <div class="steps">
+                            <div class="s1">
+                                <i></i>Sign or certify your documents on the
+                                blockchain
+                            </div>
+                            <div class="s2">
+                                <i></i>
+                                Intuitively verify your digital and printed
+                                documents
+                            </div>
+                            <div class="s3">
+                                <i></i>
+                                Legally binding, compliant, secure,
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="animation"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
