--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Welcome to PaperValut</title>
+        <title>PaperValut | Welcome</title>
         <link rel="stylesheet" href="./css/index.css" />
         <link rel="icon" href="./assets/images/fevicon.png" />
     </head>
