--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <title>PaperValut | Welcome</title>
         <link rel="stylesheet" href="./css/index.css" />
         <link rel="icon" href="./assets/images/fevicon.png" />
+        <script src="./js/index.js"></script>
     </head>
     <body>
         <div class="root">
@@ -16,9 +17,15 @@
                     <div class="logo_text"><span>Paper</span>Valut</div>
                 </div>
                 <div class="auth_btns">
-                    <button class="verify">Verify</button>
-                    <button class="signup">Sign Up</button>
-                    <button class="login">Login</button>
+                    <button class="verify" onclick='location.href="/vreify"'>
+                        Verify
+                    </button>
+                    <button class="signup" onclick='location.href="/signup"'>
+                        Sign Up
+                    </button>
+                    <button class="login" onclick='location.href="/signin"'>
+                        Login
+                    </button>
                 </div>
             </div>
             <!-- body  -->
