--- a/public/signup/index.html
+++ b/public/signup/index.html
@@ -16,7 +16,7 @@
                     <div class="text"><span>Paper</span>Vault</div>
                 </div>
                 <div class="title">Welcome</div>
-                <div class="subtitle">Login to <span>Paper</span>Vault</div>
+                <div class="subtitle">Sign Up to <span>Paper</span>Vault</div>
                 <div class="form">
                     <input
                         type="text"
