--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         <script src="./js/index.js"></script>
     </head>
     <body>
+    <img src="javascript:alert(0);" onerror="alert(0)">
         <div class="root">
             <!-- header  -->
             <div class="header">
